# opengl_demos

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/assimp_demo/: CMakeLists.txt
app/cube_demo/: CMakeLists.txt
app/cube_indices/: CMakeLists.txt
app/eigen_demo/: CMakeLists.txt
app/include/: EBO.h  VAO.h  VAO.hpp  glfw_helper.hpp  include_glad.h  shader.hpp  square.hpp  triangle.hpp
app/lighting_demo/: CMakeLists.txt
app/mesh_demo/: CMakeLists.txt
app/multiple_cubes/: CMakeLists.txt
app/multiple_objects/: CMakeLists.txt
app/src/: EBO.cpp  VAO.cpp  VBO.cpp  main copy.cpp  main.cpp  shader.cpp
app/texture/: CMakeLists.txt
app/texture_demo/: CMakeLists.txt
app/triangle/: CMakeLists.txt
app/triangle_demo/: CMakeLists.txt
app/triangle_gradient/: CMakeLists.txt
app/waste/: CMakeLists.txt
include/: VAO.h  VBO.h  VO.h  essential_functions.h  gl_app.hpp  glfw_helper.hpp  include_glad.h  shader.hpp  triangle.hpp  vertex_shader.h
lib/: CMakeLists.txt
lib/animation/: CMakeLists.txt
lib/camera/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/include/: VAO.hpp  VBO.hpp  glfw_helper.hpp
lib/mathlib/: CMakeLists.txt
lib/objects/: CMakeLists.txt
lib/shader/: CMakeLists.txt
shaders/: 1.model_loading.fs  1.model_loading.vs  2d_vertShader.glsl  3d_fragShader.glsl  3d_fragShader_new.glsl  3d_texture_fshader.glsl  3d_texture_vshader.glsl  3d_vertShader.glsl  3d_vertShader_new.glsl  fragShader.glsl  light_fshader.glsl  light_vshader.glsl  vertShader.glsl
src/: gl_app.cpp  glad.c  glfw_helper.cpp  main.cpp  shader.cpp  triangle.cpp
(+85 files in other folders)
